--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,32 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
-  font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+  font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+
+  color-scheme: light;
+  color: #121212;
+  background-color: #ffffff;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-html,
-body {
-  height: 100%;
-}
-
 body {
   margin: 0;
   min-width: 320px;
+  min-height: 100vh;
+  background-color: #ffffff;
 }
 
 #root {
-  min-height: 100%;
+  width: 100%;
+  min-height: 100vh;
 }
